--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ h6 {
     --palegrey: #F6F4F5;
     --phanitasPurple: #8856a3;
     --phanitasYellow: #fcb900;
+    --phanitasGreen: #A9CB31;
 }
 
 /* Global Styles */
@@ -93,8 +94,8 @@ body {
 }
 
 header {
-    background-color: var(--lightGreen);
-    height: 100px;
+    background-color: var(--phanitasGreen);
+    height: 120px;
 }
 
 .content-wrapper {
@@ -106,6 +107,11 @@ header {
 /* Nav Styles */
 nav {
     height: 100%;
+}
+
+.logo {
+    width: 120px;
+    height: 120px;
 }
 
 .nav-header {
@@ -128,7 +134,7 @@ nav {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    transform: translate(-101%);
+    transform: translate(-100%);
     transition: 1s;
     box-shadow: 1px 5px 5px #666666;
 }
@@ -241,26 +247,116 @@ h3 {
 
 
 /* About Us Styles */
+
+.long-logo {
+    padding-bottom: 2rem;
+}
+
 .about-us {
-    background-color: var(--lightGreen);
-    padding: 1rem 0;
+    background-color: var(--phanitasGreen);
+    padding: .5rem 0;
     display: flex;
     justify-content: center;
 }
 
-.about-us-image {
-    padding-top: 2rem;
+.about-us-card {
+    padding-bottom: 2rem;
+}
+
+.about-us-card>h2 {
+    font-size: 40px;
 }
 
 .about-us-text>p {
     padding-bottom: 1.5rem;
 }
 
+.card-img-alt {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: -40px auto 10px auto;
+    border: 4px solid white;
+    background: white;
+}
+
+/* Why */
+
+.card-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    /* One column layout */
+    gap: 5rem;
+}
+
+.card-container>h2 {
+    padding-bottom: 6rem;
+    text-align: center;
+    font-size: 40px;
+}
+
+.our-goals {
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+}
+
+.card-text>h3 {
+    text-align: center;
+}
+
+.card {
+    background-color: var(--phanitasYellow);
+    color: var(--deepPurple);
+    border-radius: 2rem;
+    padding: 2rem;
+    max-width: 350px;
+}
+
+
+.card-img {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: -90px auto 10px auto;
+    border: 4px solid white;
+    background: white;
+}
+
+.card-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-text>ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.card-text>ul>li {
+    padding-top: 0;
+    padding-bottom: .5rem;
+    margin: 0;
+}
 
 /* Our Classes/Departments */
+
 .departments {
-    background-color: #8856a3;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    background-color: var(--lightGreen);
+    padding: 1.5rem 0rem;
 }
+
+.class-title {
+    text-align: center;
+}
+
 
 /* Footer */
 
