--- a/style.css
+++ b/style.css
@@ -83,6 +83,11 @@ h6 {
     --phanitasPurple: #8856a3;
     --phanitasYellow: #fcb900;
     --phanitasGreen: #A9CB31;
+    --palePurple: #e3d5ec;
+    /* soft, airy lavender tone */
+    --paleGreen: #d9f0c1;
+    /* gentle, minty green */
+    --palePink: #f9d6e5;
 }
 
 /* Global Styles */
@@ -533,6 +538,49 @@ h3 {
     transform: translateY(-50%);
     font-size: 18px;
     color: var(--deepPurple);
+}
+
+/* Contact Styles */
+
+.get-in-touch-intro {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.contact-icon {
+    background-color: var(--palePurple);
+    padding: .8rem;
+    border-radius: .5rem;
+    margin-bottom: .5rem;
+}
+
+.in-touch-info {
+    padding-bottom: 2rem;
+}
+
+.our-address>h3 {
+    padding-bottom: .5rem;
+}
+
+.our-address {
+    margin-bottom: 2rem;
+}
+
+.map figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 125%;
+    overflow: hidden;
+    position: relative;
+}
+
+.map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 /* Media Queries */
